--- a/style.css
+++ b/style.css
@@ -53,9 +53,13 @@ body {
     height: 30px;
     border: none;
     border-radius: 4px;
-    background-color: rgb(46, 130, 255);
+    background-color: rgb(38, 123, 250);
     color: white;
     font-weight: bold;
+}
+
+#app button:hover {
+    background-color: rgb(95, 155, 245);
 }
 
 #app div {
